--- a/expose.tex
+++ b/expose.tex
@@ -1,5 +1,4 @@
 \documentclass[fontsize=11pt, paper=a4, parskip=half]{scrartcl}
-\pagestyle{plain}
 
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -45,10 +44,10 @@ Neben dem Fokus Lernende bei ihrem Lernprozess zu unterstützten versucht CrypTo
 In dieser Arbeit sollen verschiedene klassische Verschlüsselungsverfahren als Plugins für das E-Learning Tool CrypTool2 entwickelt werden. Zusätzlich zur Ver-/ und Entschlüsselung soll ebenso für alle Verfahren eine geeignete Krytographischeanalyse implementiert werden, soweit dies noch nicht durch bereits vorhandene Komponenten mit CrypTool2 möglich ist. 
 
 \section{Vorgehensweise}
-Zunächst sollen in dieser Arbeit die einzelnen Verfahren genauer erklärt werden, sowie ihre Angreifbarkeit hinsichtlich cryptographischer Analyse dargestellt werden. Basierend auf diesen Erkenntnissen werden Komponenten für das E-Learningtool CrypTool2 entwickelt, die sowohl die Ver-, als auch Entschlüsselung der entsprechenden Verfahren unterstützen.\citation{Erl2005}
+Zunächst sollen in dieser Arbeit die einzelnen Verfahren genauer erklärt werden, sowie ihre Angreifbarkeit hinsichtlich cryptographischer Analyse dargestellt werden. Basierend auf diesen Erkenntnissen werden Komponenten für das E-Learningtool CrypTool2 entwickelt, die sowohl die Ver-, als auch Entschlüsselung der entsprechenden Verfahren unterstützen.\cite{Erl2005}
 
 \pagebreak
 
-\bibliographystyle{alphadin}
+\bibliographystyle{unsrt}
 \bibliography{literature}
 \end{document}
