--- a/literature.bib
+++ b/literature.bib
@@ -2,7 +2,7 @@
 % Encoding: UTF-8
 
 
-@Standard{Brown2012,
+@Book{Brown2012,
   Title                    = {Reference Architecture Foundation for Service Oriented Architecture Version 1.0},
   Institution              = {OASIS Service Oriented Architecture Reference Model TC},
   Organization             = {OASIS},
