--- a/literature.bib
+++ b/literature.bib
@@ -1,37 +1,60 @@
-% This file was created with JabRef 2.10.
-% Encoding: UTF-8
-
-
-@Standard{Brown2012,
-  Title                    = {Reference Architecture Foundation for Service Oriented Architecture Version 1.0},
-  Institution              = {OASIS Service Oriented Architecture Reference Model TC},
-  Organization             = {OASIS},
-  Author                   = {Brown, Peter and Estefan, Jeff A. and Laskey, Ken and McCabe, Francis G. and Thornton, Danny},
-  Year                     = {2012},
-
-  Owner                    = {florian},
-  Timestamp                = {2017.01.25}
+@inproceedings{Rijmenants2011THECG,
+  title={THE COMPLETE GUIDE TO SECURE COMMUNICATIONS WITH THE ONE TIME PAD CIPHER},
+  author={Dirk Rijmenants},
+  year={2011}
+}
+@book{kahn1996codebreakers,
+  title={The Codebreakers: The Comprehensive History of Secret Communication from Ancient Times to the Internet},
+  author={Kahn, D.},
+  isbn={9781439103555},
+  url={https://books.google.de/books?id=3S8rhOEmDIIC},
+  year={1996},
+  publisher={Scribner}
+}
+@book {huber2019WindowsPresentationFoundation,
+title ={Windows Presentation Foundation das umfassende Handbuch},
+author ={Huber, Thomas Claudius, Verfasser and Galileo Press, Verlag},
+publisher = {Rheinwerk Verlag},
+address = {Bonn},
+year = {2019},
+isbn = {9783836272018; 3836272016; 978-3-8362-7201-8; 3-8362-7201-6},
+type = {text},
+howpublished = {Buch}
+}
+@book { gaines2014cryptanalysisAStudyOfCiphe,
+title = "Cryptanalysis A Study of Ciphers and Their Solution",
+author = "Gaines, Helen F.",
+publisher = "Dover Publications",
+address = "Newburyport",
+year = "2014",
+isbn = "9780486200972; 0486200973; 978-0-486-20097-2; 0-486-20097-3",
+type = "text",
+howpublished = "Buch",
+url = "http://gbv.eblib.com/patron/FullRecord.aspx?p=1920139; https://ebookcentral.proquest.com/lib/gbv/detail.action?docID=1920139; http://www.gbv.de/dms/bowker/toc/9780486200972.pdf"
 }
 
-@Book{Erl2005,
-  Title                    = {Service-Oriented Architecture (SOA) Concepts, Technology and Design},
-  Author                   = {Thomas Erl},
-  Publisher                = {Prentice Hall},
-  Year                     = {2005},
-
-  Owner                    = {florian},
-  Timestamp                = {2017.01.16}
+@article{Goldman2017William FriedmanGeneticistTurnedCryptographer,
+author = {Goldman, Irwin},
+year = {2017},
+month = {05},
+pages = {1-8},
+title = {William Friedman, Geneticist Turned Cryptographer},
+volume = {206},
+journal = {Genetics},
+doi = {10.1534/genetics.117.201624}
 }
 
-@InProceedings{Pautasso2008,
-  Title                    = {RESTful Web Services vs. "Big" Web Services: Making the Right Architectural Decision},
-  Author                   = {Cesare Pautasso and Olaf Zimmermann and Frank Leymann},
-  Booktitle                = {Proc. of the 17th Int. Conf. on World Wide Web},
-  Year                     = {2008},
-  Organization             = {ACM},
-  Pages                    = {805--814},
-
-  Owner                    = {florian},
-  Timestamp                = {2017.02.07}
+@article{GeraudStewart2020AFrenchCipherFromTheLate19thCentury,
+author = {Rémi Géraud-Stewart and David Naccache},
+title = {A French cipher from the late 19th century},
+journal = {Cryptologia},
+volume = {0},
+number = {0},
+pages = {1-29},
+year  = {2020},
+publisher = {Taylor & Francis},
+doi = {10.1080/01611194.2020.1753265},
+URL = { https://doi.org/10.1080/01611194.2020.1753265},
+eprint = {https://doi.org/10.1080/01611194.2020.1753265}
 }
 
