--- a/literature.bib
+++ b/literature.bib
@@ -13,7 +13,7 @@
 }
 @book {huber2019WindowsPresentationFoundation,
 title ={Windows Presentation Foundation das umfassende Handbuch},
-author ={Huber, Thomas Claudius, Verfasser and Galileo Press, Verlag},
+author ={Huber, Thomas Claudius},
 publisher = {Rheinwerk Verlag},
 address = {Bonn},
 year = {2019},
@@ -21,7 +21,7 @@ isbn = {9783836272018; 3836272016; 978-3-8362-7201-8; 3-8362-7201-6},
 type = {text},
 howpublished = {Buch}
 }
-@book { gaines2014cryptanalysisAStudyOfCiphe,
+@book {gaines2014cryptanalysisAStudyOfCiphe,
 title = "Cryptanalysis A Study of Ciphers and Their Solution",
 author = "Gaines, Helen F.",
 publisher = "Dover Publications",
@@ -33,7 +33,7 @@ howpublished = "Buch",
 url = "http://gbv.eblib.com/patron/FullRecord.aspx?p=1920139; https://ebookcentral.proquest.com/lib/gbv/detail.action?docID=1920139; http://www.gbv.de/dms/bowker/toc/9780486200972.pdf"
 }
 
-@article{Goldman2017William FriedmanGeneticistTurnedCryptographer,
+@article{Goldman2017WilliamFriedmanGeneticistTurnedCryptographer,
 author = {Goldman, Irwin},
 year = {2017},
 month = {05},
@@ -58,3 +58,92 @@ URL = { https://doi.org/10.1080/01611194.2020.1753265},
 eprint = {https://doi.org/10.1080/01611194.2020.1753265}
 }
 
+
+@article{Rubin2011JohnFByrnesChaocipherRevealed,
+author = {Rubin, Moshe},
+year = {2011},
+month = {10},
+pages = {328-379},
+title = {John F. Byrne's Chaocipher Revealed: An Historical and Technical Appraisal},
+volume = {35},
+journal = {Cryptologia},
+doi = {10.1080/01611194.2011.606751}
+}
+
+@misc{scheffler2010Chaocipher,
+ title={Chaocipher},
+ howpublished={\url{https://www.inference.org.uk/cs482/projects/chaocipher/}},
+ journal={Carl Scheffler: Chaocipher},
+ author={Scheffler, Carl},
+ year={2010}, month={Jul},
+ note         = {[Online; letzter Zugriff: 07.12.2020]}
+} 
+
+@misc{Rubin2020TheChaocipherClearingHouse,
+year={2020},
+month={08},
+title = {{The Chaocipher Clearing House}},
+howpublished={\url{http://www.chaocipher.com/}},
+author={Rubin, Moshe},
+ note         = {[Online; letzter Zugriff: 07.12.2020]}
+}
+
+@misc{Hill2009CHAOCIPHERANALYSISANDMODELS,
+year={2009},
+month={04},
+title = {{CHAOCIPHER: ANALYSIS AND MODELS}},
+howpublished={\url{http://www.chaocipher.com/HillDocs/H03H09.pdf}},
+author={Hill, Jeffrey A.},
+ note         = {[Online; letzter Zugriff: 07.12.2020]}
+}
+
+@misc{Cowan2010CHAOCIPHERSOLVINGEXHIBITS1and4,
+year={2010},
+month={12},
+title = {{CHAOCIPHER: SOLVING EXHIBITS 1 and 4.}},
+howpublished={\url{http://www.mountainvistasoft.com/chaocipher/CowanDocs/MJC-paper-12.10.pdf}},
+author={Cowan, Michael J.},
+ note         = {[Online; letzter Zugriff: 07.12.2020]}
+}
+
+@misc{Rubin2010CHAOCIPHERREVEALEDTHEALGORITHM,
+year={2010},
+month={07},
+title = {{CHAOCIPHER REVEALED: THE ALGORITHM}},
+howpublished={\url{http://www.chaocipher.com/ActualChaocipher/Chaocipher-Revealed-Algorithm.pdf}},
+author={Rubin, Moshe},
+ note         = {[Online; letzter Zugriff: 07.12.2020]}
+}
+
+@misc{Kuhlemann2020SpionageChiffreStraddlingCheckerboard,
+year={2020},
+title = {{Spionage Chiffre (Straddling Checkerboard)}},
+howpublished={\url{https://cool-web.de/kryptografie/chiffre/straddling-checkerboard.htm}},
+author={Kuhlemann, Oliver},
+ note         = {[Online; letzter Zugriff: 07.12.2020]}
+}
+
+@misc{Kuhlemann2020CheGuevaraChiffre,
+year={2020},
+title = {{Ché Guevara Chiffre}},
+howpublished={\url{https://kryptografie.de/kryptografie/chiffre/cheguevara.htm}},
+author={Kuhlemann, Oliver},
+ note         = {[Online; letzter Zugriff: 07.12.2020]}
+}
+
+@misc{Goebel2020TheRiseOfFieldCiphers,
+year={2020},
+month={11},
+title = {{The Rise Of Field Ciphers}},
+howpublished={\url{https://vc.airvectors.net/ttcode_03.html#m4}},
+author={Goebel, Greg},
+ note         = {Version: 5.0.0; [Online; letzter Zugriff: 07.12.2020]}
+}
+
+@misc{groverKingKushler1998ReducedKeyboardDisambiguatingComputer,
+title={Reduced keyboard disambiguating computer},
+author={{Grover, Dale L. and King, Martin T. and Kushler, Clifford A.}},
+year={1998},
+month={Oct},
+howpublished={\url{https://worldwide.espacenet.com/publicationDetails/biblio?CC=US&NR=5818437A&KC=A&FT=D&ND=&date=19981006&DB=&locale=en_EP}}
+}
