--- a/expose.tex
+++ b/expose.tex
@@ -34,12 +34,12 @@ CrypTool2 richtet sich jedoch nicht nur an die Bedürfnisse von Lernenden, sonde
 \section{Problemstellung}
 CrypTool2 bietet bereits eine große Anzahl an kryptographisch relevanten Verfahren. Jedoch sind folgende Verfahren noch nicht in CrypTool2 integriert:
 \begin{itemize}
-	\item{Straddling Checkerboard}
-	\item{Ché Guevara }
-	\item{Baconian}
-	\item{T9 ("mobile phone code")}
-	\item{Josse's Code}
-	\item{Chaocipher}
+	\item{Straddling Checkerboard} \cite{kahn1996codebreakers} \cite{Rijmenants2011THECG} \cite{Kuhlemann2020SpionageChiffreStraddlingCheckerboard} \cite{Goebel2020TheRiseOfFieldCiphers}
+	\item{Ché Guevara } \cite{Kuhlemann2020CheGuevaraChiffre}
+	\item{Baconian} \cite{Goldman2017WilliamFriedmanGeneticistTurnedCryptographer}
+	\item{T9 ("mobile phone code")} \cite{groverKingKushler1998ReducedKeyboardDisambiguatingComputer}
+	\item{Josse's Code} \cite{GeraudStewart2020AFrenchCipherFromTheLate19thCentury}
+	\item{Chaocipher} \cite{Rubin2011JohnFByrnesChaocipherRevealed} \cite{scheffler2010Chaocipher} \cite{Rubin2020TheChaocipherClearingHouse} \cite{Hill2009CHAOCIPHERANALYSISANDMODELS} \cite{Cowan2010CHAOCIPHERSOLVINGEXHIBITS1and4} \cite{Rubin2010CHAOCIPHERREVEALEDTHEALGORITHM}
 \end{itemize}
 
 Um den Umfang von CrypTool2 weiter auszubauen, sollen all diese Verfahren in CrypTool2 integriert werden. Somit wird CrypTool2 mehr zu einer zentralen Anlaufstelle, da die meisten Angebote nur einige wenige Verfahren implementieren. Obwohl es für einige der Verfahren bereits Implementierungen gibt, so fehlt jedoch meist eine visuell ansprechende Oberfläche für diese Verfahren, sodass die Funktionsweise des Verfahrens für den Nutzer leicht ersichtlich wird.
@@ -54,7 +54,7 @@ Zunächst sollen in dieser Arbeit Grundlagen der Kryptographie, sowie die einzel
 
 \pagebreak
 
-\bibliographystyle{unsrt}
+\bibliographystyle{alpha}
 \nocite{*}
 \bibliography{literature}
 \end{document}
