--- a/literature.bib
+++ b/literature.bib
@@ -1,8 +1,3 @@
-@inproceedings{Rijmenants2011THECG,
-  title={THE COMPLETE GUIDE TO SECURE COMMUNICATIONS WITH THE ONE TIME PAD CIPHER},
-  author={Dirk Rijmenants},
-  year={2011}
-}
 @book{kahn1996codebreakers,
   title={The Codebreakers: The Comprehensive History of Secret Communication from Ancient Times to the Internet},
   author={Kahn, D.},
@@ -131,6 +126,15 @@ author={Kuhlemann, Oliver},
  note         = {[Online; letzter Zugriff: 07.12.2020]}
 }
 
+@misc{Lyons2012CryptanalysisOfTheSimpleSubstitutionCipher,
+year={2012},
+title = {{Cryptanalysis of the Simple Substitution Cipher}},
+howpublished={\url{http://practicalcryptography.com/cryptanalysis/stochastic-searching/cryptanalysis-simple-substitution-cipher/}},
+author={Lyons, James},
+ note         = {[Online; letzter Zugriff: 07.12.2020]}
+}
+
+
 @misc{Goebel2020TheRiseOfFieldCiphers,
 year={2020},
 month={11},
@@ -146,4 +150,12 @@ author={{Grover, Dale L. and King, Martin T. and Kushler, Clifford A.}},
 year={1998},
 month={Oct},
 howpublished={\url{https://worldwide.espacenet.com/publicationDetails/biblio?CC=US&NR=5818437A&KC=A&FT=D&ND=&date=19981006&DB=&locale=en_EP}}
+}
+
+@misc{unknown2020T9TextMessage,
+title={{T9 (Text Message)}},
+author={{unknown}},
+year={2020},
+howpublished={\url{https://www.dcode.fr/t9-cipher}},
+ note         = {[Online; letzter Zugriff: 07.12.2020]}
 }
