--- a/expose.tex
+++ b/expose.tex
@@ -29,7 +29,7 @@
 \begin{center}
 \textbf{\LARGE{Exposé für eine Bachelorarbeit}}\\
 \Large{über das Themengebiet}\\
-\textbf{\LARGE{Codes und klassische Verschlüsselungsverfahren}}\\
+\textbf{\LARGE{Codes und klassische Verschlüsselungsverfahren in CrypTool2}}\\
 \end{center}
 \vspace{6cm}
 \begin{flushleft}
@@ -49,12 +49,12 @@
 \newpage
 
 \section{Motivation}
-Für das Erlernen von kryptographischen Fähigkeiten ist es wichtig, dass bei den Lerninhalten eine möglichst geringe Hürde hinsichtlich der Komplexität gesetzt wird. Um Lernenden einen einfachen Einstieg in dieses komplexe Themengebiet ermöglichen zu können, wurde CrypTool2 entwickelt. CrypTool2 ist ein Computerprogramm, dass weltweit eingesetzt wird, um an Schulen, Universitäten oder in Unternehmen einen einfachen Einstieg in die Welt der Kryptographie zu bieten. Um den Prozess des Lernens bestmöglich unterstützen zu können ist es sinnvoll, dass viele Verfahren unterstützt werden, um die Grundprinzipien von kryptographischen Verfahren vielfältig und anschaulich für Lernende zugänglich zu machen. Durch die intuitive visuelle Programmierung in CrypTool2 kann der individuelle Lernprozess des Anwenders unterstützt werden. Durch die Visualisierung der Algorithmen wird eine anschauliche Lernbasis geboten.
+Für das Erlernen von kryptografischen Fähigkeiten ist es wichtig, dass bei den Lerninhalten eine möglichst geringe Hürde hinsichtlich der Komplexität gesetzt wird. Um Lernenden einen einfachen Einstieg in die Welt der Kryptografie ermöglichen zu können, wurde CrypTool2 entwickelt. CrypTool2 ist ein Computerprogramm, das weltweit an Schulen, Universitäten oder in Unternehmen eingesetzt wird. Um den Prozess des Lernens bestmöglich unterstützen zu können, ist es sinnvoll, dass viele Verfahren unterstützt werden, um die Grundprinzipien von kryptografischen Verfahren vielfältig und anschaulich für Lernende zugänglich zu machen. Durch die intuitive visuelle Programmierung in CrypTool2 kann der individuelle Lernprozess des Anwenders unterstützt werden. Durch die Visualisierung der einzelnen Komponenten werden die Verfahren anschaulich erklärt.
 
-CrypTool2 richtet sich jedoch nicht nur an die Bedürfnisse von Lernenden, sondern ist ebenso auf eine anspruchsvollere Nutzung ausgerichtet. Beispielsweise könnten historisch interessierte CrypTool2 Nutzen, um Verschlüsselte oder Codierte Texte wieder lesbar zu machen. Nicht selten kommt es vor, dass historische Texte durch ein kryptographisches Verfahren geschützt wurden, um den Inhalt des Textes beispielsweise vor Dritten zu schützen. Bei der Verschlüsselung von alten Texten kamen zumeist nur einfache Verfahren zum Einsatz. Diese Verfahren lassen sich mittels moderner Computer und kryptographischer Analyse leicht brechen. Hierzu ist es nützlich, wenn CrypTool2 für verschiedene klassische Verfahren eine geeignete Analyse bieten kann. Eine Analyse des Verfahrens lässt Schlüsse auf mögliche Schwachstellen des Verfahrens zu. Schachstellen des Verfahrens können dann verwendet werden, um die Verschlüsselung zu brechen und somit den Inhalt eines Textes zu offenbaren.
+CrypTool2 richtet sich jedoch nicht nur an die Bedürfnisse von Lernenden, sondern ist ebenso auf eine anspruchsvollere Nutzung ausgerichtet. Beispielsweise können historisch interessierte Nutzer CrypTool2 nutzen, um verschlüsselte oder codierte Texte wieder lesbar zu machen. Denn nicht selten kommt es vor, dass historische Texte durch ein kryptografisches Verfahren geschützt wurden, um den Inhalt des Textes beispielsweise vor Dritten zu schützen. Bei der Verschlüsselung von alten Texten kamen zumeist nur einfache Verfahren zum Einsatz. Diese Verfahren lassen sich mittels moderner Computer und kryptografischer Analyse leicht brechen. Hierzu ist es nützlich, wenn CrypTool2 für verschiedene klassische Verfahren eine geeignete Analyse bieten kann. Eine Analyse des Verfahrens lässt Schlüsse auf mögliche Schwachstellen des Verfahrens zu. Schwachstellen des Verfahrens können dann verwendet werden, um die Verschlüsselung zu brechen und somit den Inhalt eines Textes zu offenbaren.
 
 \section{Problemstellung}
-CrypTool2 bietet bereits eine große Anzahl an kryptographisch relevanten Verfahren. Jedoch sind folgende Verfahren noch nicht in CrypTool2 integriert:
+CrypTool2 bietet bereits eine große Anzahl an relevanten kryptografischen Verfahren, jedoch sind folgende Verfahren noch nicht in CrypTool2 integriert:
 \begin{itemize}
 	\item{Straddling Checkerboard} 
 	\item{Ché Guevara}
@@ -64,31 +64,31 @@ CrypTool2 bietet bereits eine große Anzahl an kryptographisch relevanten Verfah
 	\item{Chaocipher} 
 \end{itemize}
 
-Um den Umfang von CrypTool2 weiter auszubauen, sollen all diese Verfahren in CrypTool2 integriert werden. Somit wird CrypTool2 mehr zu einer zentralen Anlaufstelle, da die meisten Angebote nur einige wenige Verfahren implementieren. Obwohl es für einige der Verfahren bereits Implementierungen gibt, so fehlt jedoch meist eine visuell ansprechende Oberfläche für diese Verfahren, sodass die Funktionsweise des Verfahrens für den Nutzer leicht ersichtlich wird.
+Um den Umfang von CrypTool2 weiter auszubauen, sollen diese Verfahren in CrypTool2 integriert werden. Somit wird CrypTool2 interessanter für Nutzer, da die meisten Angebote im Internet nur einige wenige Verfahren implementieren und zumeist in ihrem Funktionsumfang sehr beschränkt sind. Es gibt im Internet bereits für einige der Verfahren Implementierungen, jedoch fehlt meist eine visuell ansprechende Oberfläche für diese Verfahren, sodass die Funktionsweise des Verfahrens für den Nutzer nicht leicht ersichtlich ist.
 
-Ebenso wichtig, wie die Darstellung eines Verfahrens ist für den Nutzer die Möglichkeit zur Analyse des Verfahrens. Dazu finden sich zumeist nur theoretische wissenschaftliche Arbeiten, jedoch keinerlei interaktive Anwendungen, die die Analyse verdeutlichen.
+Ebenso wichtig wie die Darstellung eines Verfahrens ist für viele Nutzer die Möglichkeit zur Analyse des Verfahrens. Dazu finden sich zumeist nur theoretische wissenschaftliche Arbeiten, jedoch keinerlei interaktive Anwendungen, die die Analyse verdeutlichen.
 
-\section{Erklärung der Verfahren und aktueller wissenschaftlicher Stand}
+\section{Kurze Erklärung der Verfahren und aktueller Forschungsstand}
 \subsection{Straddling Checkerboard}
-Die Straddling Checkerboard Chiffre ist ein Verfahren, das auf einer 3x10-Matrix beruht. Bei dem Verfahren wird eine Substitution von einem Zeichen in eine ein- oder zweistellige Zahl durchgeführt. Das Verfahren wird genauer unter \cite{Kuhlemann2020SpionageChiffreStraddlingCheckerboard} und \cite{Goebel2020TheRiseOfFieldCiphers} beschrieben. Mittels statistischer Verfahren kann die Checkerboard Chiffre gebrochen werdern. \cite{Lyons2012CryptanalysisOfTheSimpleSubstitutionCipher}
+Die Straddling Checkerboard Chiffre ist ein Verfahren, das auf einer 3x10-Matrix beruht. Bei dem Verfahren wird eine Substitution von einem Zeichen in eine ein- oder zweistellige Zahl durchgeführt. Das Verfahren wird genauer unter \cite{Kuhlemann2020SpionageChiffreStraddlingCheckerboard} und \cite{Goebel2020TheRiseOfFieldCiphers} beschrieben. Mittels statistischer Verfahren kann die Checkerboard Chiffre gebrochen werden. \cite{Lyons2012CryptanalysisOfTheSimpleSubstitutionCipher}
 \subsection{Ché Guevara}
-Ché Guevara verwendete die Straddling Checkerboard Chiffre, um mit Fidel Castro zu kommunizieren. Dazu verwendete er das Verfahren immer mit dem selben Schlüssel. \cite{Kuhlemann2020CheGuevaraChiffre}
+Ernesto "Che" Guevara verwendete die Straddling Checkerboard Chiffre, um mit Fidel Castro zu kommunizieren. Dazu verwendete er das Verfahren immer mit demselben Schlüssel. \cite{Kuhlemann2020CheGuevaraChiffre}
 \subsection{Baconian}
-Dieses Verfahren bildet einzelne Zeichen auf ein binäres Zeichensystem ab. So wird beispielsweise ein A zu aaaaa und ein B zu aaaab. Die Geschichte hinter dem Verfahren, sowie eine Erklärung der Funktionsweise wird in einem Paper beschrieben, das im Journal \textit{Genetics} veröffentlicht wurde.
+Dieses Verfahren bildet einzelne Zeichen auf ein binäres Zeichensystem ab. So wird beispielsweise ein A zu aaaaa und ein B zu aaaab. Die Geschichte hinter dem Verfahren sowie eine Erklärung der Funktionsweise wird in einem Paper beschrieben, das im Journal \textit{Genetics} veröffentlicht wurde.
 \cite{Goldman2017WilliamFriedmanGeneticistTurnedCryptographer}
 \subsection{T9 ("mobile phone code")}
-T9 ist ein Eingabe Verfahren, das Verwendet wurde, um auf Geräten mit nur 12 Tasten vollständige Wörter schreiben zu können. Dieses Verfahren kann jedoch auch als Verschlüsselung verwendet werden, indem die Zahlen auf den Tasten, die für ein bestimmtes Wort gedrückt wurden, als Ciphertext verwendet werden. Eine wissenschaftliche Ausarbeitung über die kryptographischen Eigenschaften, sowie über die Funktionsweise existieren nicht. Es gibt jedoch Websiten, die eine Anwendung des Verfahrens verdeutlichen. \cite{unknown2020T9TextMessage} Die genaue Funktionsweise des Verfahrens wird im Patent zu diesem System erklärt. \cite{groverKingKushler1998ReducedKeyboardDisambiguatingComputer}
+T9 ist ein Eingabeverfahren, das verwendet wurde, um auf Geräten mit nur 12 Tasten vollständige Wörter schreiben zu können. Dieses Verfahren kann jedoch auch als Verschlüsselung verwendet werden, indem die Zahlen auf den Tasten, die für ein bestimmtes Wort gedrückt wurden, als Geheimtext verwendet werden. Eine wissenschaftliche Ausarbeitung über die kryptografischen Eigenschaften sowie über die Funktionsweise existieren nicht. Es gibt jedoch Internetseiten, die eine Anwendung des Verfahrens zeigen. \cite{unknown2020T9TextMessage} Die genaue Funktionsweise von T9 wird im zugehörigen Patent zu diesem System erklärt. \cite{groverKingKushler1998ReducedKeyboardDisambiguatingComputer}
 \subsection{Josse's Code}
-Josse's Code ist ein Verfahren, das in Frankreich von H. D. Josse entwickelt wurde. Das Verfahren wurde jedoch erst jüngst wissenschaftlich untersucht und beschrieben, da die Unterlagen von Josse lange Zeit in verschiedenen Militärarchiven gelagert wurden. Die einzige bislang existierende Wissenschaftliche Arbeit zu diesem Verfahren wurde von Rémi Géraud-Stewart and David Naccache verfasst. \cite{GeraudStewart2020AFrenchCipherFromTheLate19thCentury}
+Josse's Code ist ein Verfahren, das in Frankreich von H. D. Josse entwickelt wurde. Das Verfahren wurde jedoch erst jüngst wissenschaftlich untersucht und beschrieben, da die Unterlagen von Josse lange Zeit in verschiedenen Militärarchiven unter Verschluss gehalten wurden. Die einzige bislang existierende wissenschaftliche Arbeit zu diesem Verfahren wurde von Rémi Géraud-Stewart and David Naccache verfasst. \cite{GeraudStewart2020AFrenchCipherFromTheLate19thCentury}
 \subsection{Chaocipher}
-Die Chaocipher ist ein Verfahren, dass 1918 von John Francis Byrne entwickelt wurde. Das Verfahren war lange Zeit geheim, da Byrnes Familie erst 2010 Byrnes Unterlagen veröffentlichte. Byrnes hat 4 Aufgaben in einem Buch veröffentlicht, die er als Exponate bezeichnete, wovon die Exponate 2 und 3 bislang noch nicht gebrochen wurden.\cite{Cowan2010CHAOCIPHERSOLVINGEXHIBITS1and4} \cite{scheffler2010Chaocipher} Über das Verfahren gibt es einige wissenschaftliche Arbeiten. \cite{Rubin2011JohnFByrnesChaocipherRevealed} \cite{Hill2009CHAOCIPHERANALYSISANDMODELS}
+Die Chaocipher ist ein Verfahren, dass 1918 von John Francis Byrne entwickelt wurde. Das Verfahren war lange Zeit unbekannt, da Byrnes Familie erst 2010 Byrnes Unterlagen veröffentlichte. Byrnes hat 4 Aufgaben in einem Buch veröffentlicht. Die 4 Aufgaben bezeichnet er als Exponate, wovon die Exponate 2 und 3 bislang noch nicht gebrochen entschlüsselt werden konnten.\cite{Cowan2010CHAOCIPHERSOLVINGEXHIBITS1and4} \cite{scheffler2010Chaocipher} Über das Verfahren gibt es einige wissenschaftliche Arbeiten. \cite{Rubin2011JohnFByrnesChaocipherRevealed} \cite{Hill2009CHAOCIPHERANALYSISANDMODELS}
  \cite{Rubin2010CHAOCIPHERREVEALEDTHEALGORITHM}
 Sowie eine Website, in der die Geschichte des Verfahrens detailliert zusammengefasst wird.
  \cite{Rubin2020TheChaocipherClearingHouse}   
 \section{Zielsetzung}
-Die Zielsetzung besteht aus drei Bereichen. Erstens sollen verschiedene klassische Verfahren als Plugins für das E-Learning Tool CrypTool2 entwickelt werden. Für jedes Verfahren wird dazu eine Komponente zur Ver-/ und Entschlüsselung entwickelt. Zweitens soll für jedes Verfahren eine geeignete kryptographische Analyse  (soweit dies noch nicht durch bereits vorhandene Komponenten mit CrypTool2 möglich ist). Um einen besseren Lernprozess zu unterstützen sollen das T9-Verfahren, sowie das Straddling-Board-Verfahren zusätzlich mit einer Visualisierung implementiert werden. Konkret bedeutet dies, dass die Eingabe für T9 durch eine Handytastatur visualisiert wird und die Straddling-Board-Verfahren durch ein virtuelles Straddling-Board. Drittens sollen alle Verfahren hinsichtlich ihrer Sicherheit hin untersucht werden.\\
+Das Ziel dieser Arbeit besteht aus drei Bereichen. Erstens sollen verschiedene klassische Verfahren als Plugins für das E-Learning Tool CrypTool2 entwickelt werden. Für jedes Verfahren wird dazu eine Komponente zur Ver-/ und Entschlüsselung entwickelt. Um einen besseren Lernprozess zu unterstützen, sollen das T9-Verfahren, sowie das Straddling-Board-Verfahren zusätzlich mit einer Visualisierung implementiert werden. Konkret bedeutet dies, dass die Eingabe für T9 durch eine Handytastatur visualisiert wird und die Straddling-Board-Verfahren durch ein virtuelles Straddling-Board realisiert werden. Zweitens soll für jedes Verfahren eine geeignete kryptografische Analyse (soweit dies noch nicht durch bereits vorhandene Komponenten mit CrypTool2 möglich ist) realisiert werden. Drittens sollen alle Verfahren hinsichtlich ihrer Sicherheit hin untersucht und bewertet werden.\\
 \linebreak
-\textbf{Ziele der Arbeit:}
+\textbf{Ziele der Arbeit im Überblick:}
 \begin{itemize}
 	\item{Genannte Verfahren als Plugins für CrypTool2 entwickeln}
 	\item{Plugins für kryptographische Analyse der Verfahren entwickeln}
@@ -96,7 +96,7 @@ Die Zielsetzung besteht aus drei Bereichen. Erstens sollen verschiedene klassisc
 \end{itemize}
 
 \section{Vorgehensweise}
-Zunächst sollen in dieser Arbeit Grundlagen der Kryptographie, sowie die einzelnen Verfahren genauer erklärt werden. Bei der Erläuterung der Verfahren soll ein besonderer Fokus auf die Stärke, sowie ihre Angreifbarkeit mittels kryptographischer Analyse gelegt werden. Basierend auf diesen Erkenntnissen werden dann Plugins für das E-Learningtool CrypTool2 entwickelt, die sowohl die Ver-, als auch die Entschlüsselung der entsprechenden Verfahren unterstützen. Ebenfalls sollen die Analysen, die auf das die Verfahren im ersten Teil angewendet wurden als Plugins für CrypTool2 implementiert werden. 
+Zunächst sollen in dieser Arbeit Grundlagen der Kryptografie sowie die einzelnen Verfahren genauer erklärt werden. Bei der Erläuterung der Verfahren soll ein besonderer Fokus auf die Stärke sowie ihre Angreifbarkeit mittels kryptografischer Analyse gelegt werden. Basierend auf diesen Erkenntnissen werden dann Plugins für das E-Learningtool CrypTool2 entwickelt, die sowohl die Ver-, als auch die Entschlüsselung der entsprechenden Verfahren realisieren. Anschließend sollen die Verfahren hinsichtlich ihrer Schwachstellen kryptografisch analysiert werden. Die dabei verwendeten Analysetechniken werden dann ebenfalls mittels einzelner Plugins in CrypTool2 realisiert, um die Analyse reproduzierbar zu machen. Für eine leichtere Benutzung der Verfahren werden abschließend Vorlagen für die Analyse, die Verschlüsselung und die Entschlüsselung erstellt. Abschließend sollen die Verfahren hinsichtlich ihrer Sicherheit in der modernen Zeit bewertet werden.
 
 \newpage
 \section{Vorläufige Gliederung}
