Change image file format

--- a/expose.tex
+++ b/expose.tex
@@ -21,7 +21,7 @@
 
 \begin{figure}[t]
  \centering
- \includegraphics[width=0.6\textwidth]{images/uni-siegen.jpg}
+ \includegraphics[width=0.6\textwidth]{images/uni-siegen.png}
 \end{figure}
 
 \vspace{2.5cm}
