--- a/expose.tex
+++ b/expose.tex
@@ -48,12 +48,12 @@
 \newpage
 
 \section{Motivation}
-Für das Erlernen von kryptografischen Fähigkeiten ist es wichtig, dass bei den Lerninhalten eine möglichst geringe Hürde hinsichtlich der Komplexität gesetzt wird. Um Lernenden einen einfachen Einstieg in die Welt der Kryptografie ermöglichen zu können, wurde CrypTool2 entwickelt. CrypTool2 ist ein Computerprogramm, das weltweit an Schulen, Universitäten oder in Unternehmen eingesetzt wird. Um den Prozess des Lernens bestmöglich unterstützen zu können, ist es sinnvoll, dass viele Verfahren unterstützt werden, um die Grundprinzipien von kryptografischen Verfahren vielfältig und anschaulich für Lernende zugänglich zu machen. Durch die intuitive visuelle Programmierung in CrypTool2 kann der individuelle Lernprozess des Anwenders unterstützt werden. Durch die Visualisierung der einzelnen Komponenten werden die Verfahren anschaulich erklärt.
+Für das Erlernen von kryptografischen Fähigkeiten ist es wichtig, dass bei den Lerninhalten eine möglichst geringe Hürde hinsichtlich der Komplexität gesetzt wird. Um Lernenden einen einfachen Einstieg in die Welt der Kryptografie ermöglichen zu können, wurde CrypTool 2 entwickelt. CrypTool 2 ist ein Computerprogramm, das weltweit an Schulen, Universitäten oder in Unternehmen eingesetzt wird. Um den Prozess des Lernens bestmöglich unterstützen zu können, ist es sinnvoll, dass viele Verfahren unterstützt werden, um die Grundprinzipien von kryptografischen Verfahren vielfältig und anschaulich für Lernende zugänglich zu machen. Durch die intuitive visuelle Programmierung in CrypTool 2 kann der individuelle Lernprozess des Anwenders unterstützt werden. Durch die Visualisierung der einzelnen Komponenten werden die Verfahren anschaulich erklärt.
 
-CrypTool2 richtet sich jedoch nicht nur an die Bedürfnisse von Lernenden, sondern ist ebenso auf eine anspruchsvollere Nutzung ausgerichtet. Beispielsweise können historisch interessierte Nutzer CrypTool2 nutzen, um verschlüsselte oder codierte Texte wieder lesbar zu machen. Denn nicht selten kommt es vor, dass historische Texte durch ein kryptografisches Verfahren geschützt wurden, um den Inhalt des Textes beispielsweise vor Dritten zu schützen. Bei der Verschlüsselung von alten Texten kamen zumeist nur einfache Verfahren zum Einsatz. Diese Verfahren lassen sich mittels moderner Computer und kryptografischer Analyse leicht brechen. Hierzu ist es nützlich, wenn CrypTool2 für verschiedene klassische Verfahren eine geeignete Analyse bieten kann. Eine Analyse des Verfahrens lässt Schlüsse auf mögliche Schwachstellen des Verfahrens zu. Schwachstellen des Verfahrens können dann verwendet werden, um die Verschlüsselung zu brechen und somit den Inhalt eines Textes zu offenbaren.
+CrypTool 2 richtet sich jedoch nicht nur an die Bedürfnisse von Lernenden, sondern ist ebenso auf eine anspruchsvollere Nutzung ausgerichtet. Beispielsweise können historisch interessierte Nutzer CrypTool 2 nutzen, um verschlüsselte oder codierte Texte wieder lesbar zu machen. Denn nicht selten kommt es vor, dass historische Texte durch ein kryptografisches Verfahren geschützt wurden, um den Inhalt des Textes beispielsweise vor Dritten zu schützen. Bei der Verschlüsselung von alten Texten kamen zumeist nur einfache Verfahren zum Einsatz. Diese Verfahren lassen sich mittels moderner Computer und kryptografischer Analyse leicht brechen. Hierzu ist es nützlich, wenn CrypTool 2 für verschiedene klassische Verfahren eine geeignete Analyse bieten kann. Eine Analyse des Verfahrens lässt Schlüsse auf mögliche Schwachstellen des Verfahrens zu. Schwachstellen des Verfahrens können dann verwendet werden, um die Verschlüsselung zu brechen und somit den Inhalt eines Textes zu offenbaren.
 
 \section{Problemstellung}
-CrypTool2 bietet bereits eine große Anzahl an relevanten kryptografischen Verfahren, jedoch sind folgende Verfahren noch nicht in CrypTool2 integriert:
+CrypTool 2 bietet bereits eine große Anzahl an relevanten kryptografischen Verfahren, jedoch sind folgende Verfahren noch nicht in CrypTool 2 integriert:
 \begin{itemize}
 	\item{Straddling Checkerboard} 
 	\item{Ché Guevara}
@@ -63,7 +63,7 @@ CrypTool2 bietet bereits eine große Anzahl an relevanten kryptografischen Verfa
 	\item{Chaocipher} 
 \end{itemize}
 
-Um den Umfang von CrypTool2 weiter auszubauen, sollen diese Verfahren in CrypTool2 integriert werden. Somit wird CrypTool2 interessanter für Nutzer, da die meisten Angebote im Internet nur einige wenige Verfahren implementieren und zumeist in ihrem Funktionsumfang sehr beschränkt sind. Es gibt im Internet bereits für einige der Verfahren Implementierungen, jedoch fehlt meist eine visuell ansprechende Oberfläche für diese Verfahren, sodass die Funktionsweise des Verfahrens für den Nutzer nicht leicht ersichtlich ist.
+Um den Umfang von CrypTool 2 weiter auszubauen, sollen diese Verfahren in CrypTool 2 integriert werden. Somit wird CrypTool 2 interessanter für Nutzer, da die meisten Angebote im Internet nur einige wenige Verfahren implementieren und zumeist in ihrem Funktionsumfang sehr beschränkt sind. Es gibt im Internet bereits für einige der Verfahren Implementierungen, jedoch fehlt meist eine visuell ansprechende Oberfläche für diese Verfahren, sodass die Funktionsweise des Verfahrens für den Nutzer nicht leicht ersichtlich ist.
 
 Ebenso wichtig wie die Darstellung eines Verfahrens ist für viele Nutzer die Möglichkeit zur Analyse des Verfahrens. Dazu finden sich zumeist nur theoretische wissenschaftliche Arbeiten, jedoch keinerlei interaktive Anwendungen, die die Analyse verdeutlichen.
 
@@ -80,22 +80,22 @@ T9 ist ein Eingabeverfahren, das verwendet wurde, um auf Geräten mit nur 12 Tas
 \subsection{Josse's Code}
 Josse's Code ist ein Verfahren, das in Frankreich von H. D. Josse entwickelt wurde. Das Verfahren wurde jedoch erst jüngst wissenschaftlich untersucht und beschrieben, da die Unterlagen von Josse lange Zeit in verschiedenen Militärarchiven unter Verschluss gehalten wurden. Die einzige bislang existierende wissenschaftliche Arbeit zu diesem Verfahren wurde von Rémi Géraud-Stewart and David Naccache verfasst. \cite{GeraudStewart2020AFrenchCipherFromTheLate19thCentury}
 \subsection{Chaocipher}
-Die Chaocipher ist ein Verfahren, dass 1918 von John Francis Byrne entwickelt wurde. Das Verfahren war lange Zeit unbekannt, da Byrnes Familie erst 2010 Byrnes Unterlagen veröffentlichte. Byrnes hat 4 Aufgaben in einem Buch veröffentlicht. Die 4 Aufgaben bezeichnet er als Exponate, wovon die Exponate 2 und 3 bislang noch nicht gebrochen entschlüsselt werden konnten.\cite{Cowan2010CHAOCIPHERSOLVINGEXHIBITS1and4} \cite{scheffler2010Chaocipher} Über das Verfahren gibt es einige wissenschaftliche Arbeiten. \cite{Rubin2011JohnFByrnesChaocipherRevealed} \cite{Hill2009CHAOCIPHERANALYSISANDMODELS}
+Die Chaocipher ist ein Verfahren, das 1918 von John Francis Byrne entwickelt wurde. Das Verfahren war lange Zeit unbekannt, da Byrnes Familie erst 2010 Byrnes Unterlagen veröffentlichte. Byrnes hat 4 Aufgaben in einem Buch veröffentlicht. Die 4 Aufgaben bezeichnet er als Exponate, wovon die Exponate 2 und 3 bislang noch nicht gebrochen entschlüsselt werden konnten.\cite{Cowan2010CHAOCIPHERSOLVINGEXHIBITS1and4} \cite{scheffler2010Chaocipher} Über das Verfahren gibt es einige wissenschaftliche Arbeiten. \cite{Rubin2011JohnFByrnesChaocipherRevealed} \cite{Hill2009CHAOCIPHERANALYSISANDMODELS}
  \cite{Rubin2010CHAOCIPHERREVEALEDTHEALGORITHM}
 Sowie eine Website, in der die Geschichte des Verfahrens detailliert zusammengefasst wird.
  \cite{Rubin2020TheChaocipherClearingHouse}   
 \section{Zielsetzung}
-Das Ziel dieser Arbeit besteht aus drei Bereichen. Erstens sollen verschiedene klassische Verfahren als Plugins für das E-Learning Tool CrypTool2 entwickelt werden. Für jedes Verfahren wird dazu eine Komponente zur Ver-/ und Entschlüsselung entwickelt. Um einen besseren Lernprozess zu unterstützen, sollen das T9-Verfahren, sowie das Straddling-Board-Verfahren zusätzlich mit einer Visualisierung implementiert werden. Konkret bedeutet dies, dass die Eingabe für T9 durch eine Handytastatur visualisiert wird und die Straddling-Board-Verfahren durch ein virtuelles Straddling-Board realisiert werden. Zweitens soll für jedes Verfahren eine geeignete kryptografische Analyse (soweit dies noch nicht durch bereits vorhandene Komponenten mit CrypTool2 möglich ist) realisiert werden. Drittens sollen alle Verfahren hinsichtlich ihrer Sicherheit hin untersucht und bewertet werden.\\
+Das Ziel dieser Arbeit besteht aus drei Bereichen. Erstens sollen verschiedene klassische Verfahren als Plugins für das E-Learning Tool CrypTool 2 entwickelt werden. Für jedes Verfahren wird dazu eine Komponente zur Ver-/ und Entschlüsselung entwickelt. Um einen besseren Lernprozess zu unterstützen, sollen das T9-Verfahren, sowie das Straddling-Board-Verfahren zusätzlich mit einer Visualisierung implementiert werden. Konkret bedeutet dies, dass die Eingabe für T9 durch eine Handytastatur visualisiert wird und die Straddling-Board-Verfahren durch ein virtuelles Straddling-Board realisiert werden. Zweitens soll für jedes Verfahren eine geeignete kryptografische Analyse (soweit dies noch nicht durch bereits vorhandene Komponenten mit CrypTool 2 möglich ist) realisiert werden. Drittens sollen alle Verfahren hinsichtlich ihrer Sicherheit hin untersucht und bewertet werden.\\
 \linebreak
 \textbf{Ziele der Arbeit im Überblick:}
 \begin{itemize}
-	\item{Genannte Verfahren als Plugins für CrypTool2 entwickeln}
+	\item{Genannte Verfahren als Plugins für CrypTool 2 entwickeln}
 	\item{Plugins für kryptographische Analyse der Verfahren entwickeln}
 	\item{Sicherheit der Verfahren bewerten}	
 \end{itemize}
 
 \section{Vorgehensweise}
-Zunächst sollen in dieser Arbeit Grundlagen der Kryptografie sowie die einzelnen Verfahren genauer erklärt werden. Bei der Erläuterung der Verfahren soll ein besonderer Fokus auf die Stärke sowie ihre Angreifbarkeit mittels kryptografischer Analyse gelegt werden. Basierend auf diesen Erkenntnissen werden dann Plugins für das E-Learningtool CrypTool2 entwickelt, die sowohl die Ver-, als auch die Entschlüsselung der entsprechenden Verfahren realisieren. Anschließend sollen die Verfahren hinsichtlich ihrer Schwachstellen kryptografisch analysiert werden. Die dabei verwendeten Analysetechniken werden dann ebenfalls mittels einzelner Plugins in CrypTool2 realisiert, um die Analyse reproduzierbar zu machen. Für eine leichtere Benutzung der Verfahren werden abschließend Vorlagen für die Analyse, die Verschlüsselung und die Entschlüsselung erstellt. Abschließend sollen die Verfahren hinsichtlich ihrer Sicherheit in der modernen Zeit bewertet werden.
+Zunächst sollen in dieser Arbeit Grundlagen der Kryptografie sowie die einzelnen Verfahren genauer erklärt werden. Bei der Erläuterung der Verfahren soll ein besonderer Fokus auf die Stärke sowie ihre Angreifbarkeit mittels kryptografischer Analyse gelegt werden. Basierend auf diesen Erkenntnissen werden dann Plugins für das E-Learningtool CrypTool 2 entwickelt, die sowohl die Ver-, als auch die Entschlüsselung der entsprechenden Verfahren realisieren. Anschließend sollen die Verfahren hinsichtlich ihrer Schwachstellen kryptografisch analysiert werden. Die dabei verwendeten Analysetechniken werden dann ebenfalls mittels einzelner Plugins in CrypTool 2 realisiert, um die Analyse reproduzierbar zu machen. Für eine leichtere Benutzung der Verfahren werden abschließend Vorlagen für die Analyse, die Verschlüsselung und die Entschlüsselung erstellt. Abschließend sollen die Verfahren hinsichtlich ihrer Sicherheit in der modernen Zeit bewertet werden.
 
 \newpage
 \section{Vorläufige Gliederung}
@@ -121,7 +121,7 @@ Zunächst sollen in dieser Arbeit Grundlagen der Kryptografie sowie die einzelne
 					\item{Known-Plaintext Angriff}
 					\item{Chosen-Plaintext Angriff}
 				\end{enumerate}
-			\item{Kerckhoff Prinzip}
+			\item{Kerckhoffs Prinzip}
 		\end{enumerate}
 	\item{Funktionsweise der Verfahren}
 		\begin{enumerate}[label={\arabic*.}]
